Finished Getting Started Chapter && Some Grid Mechanics

--- a/OpenGLTest/OpenGLTest.vcxproj
+++ b/OpenGLTest/OpenGLTest.vcxproj
@@ -71,7 +71,7 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>C:\Users\Oleg\Desktop\OpenGL\includes;$(IncludePath)</IncludePath>
+    <IncludePath>C:\Users\Oleg\Desktop\OpenGL\includes;includes\;$(IncludePath)</IncludePath>
     <LibraryPath>C:\Users\Oleg\Desktop\OpenGL\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -129,7 +129,20 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\..\Desktop\glad.c" />
+    <ClCompile Include="stb_image.cpp" />
     <ClCompile Include="main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="includes\camera.h" />
+    <ClInclude Include="includes\shader_s.h" />
+    <ClInclude Include="includes\stb_image.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="3.3.shader.fs" />
+    <None Include="3.3.shader.vs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\..\..\..\Desktop\container.jpg" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
